[BUGFIX] Restrict visibility settings to page module classes
Resolves: #58175
Reviewed-on: https://review.typo3.org/30054
Tested-by: Peter Kraume
Tested-by: Jo Hasenau

--- a/Resources/Public/Backend/Css/Skin/t3skin_override.css
+++ b/Resources/Public/Backend/Css/Skin/t3skin_override.css
@@ -334,10 +334,14 @@ td.t3-page-column, td.t3-page-lang-column {
 	border-color: #5b5b5b;
 }
 
-.t3-icon-document-new,
-.t3-icon-gridelements-copyfrompage,
-.t3-icon-gridelements-pastecopy,
-.t3-icon-gridelements-pasteref {
+.t3-page-column .t3-icon-document-new,
+.t3-page-column .t3-icon-gridelements-copyfrompage,
+.t3-page-column .t3-icon-gridelements-pastecopy,
+.t3-page-column .t3-icon-gridelements-pasteref,
+.t3-page-ce .t3-icon-document-new,
+.t3-page-ce .t3-icon-gridelements-copyfrompage,
+.t3-page-ce .t3-icon-gridelements-pastecopy,
+.t3-page-ce .t3-icon-gridelements-pasteref {
 	visibility: visible!important;
 	display: none!important;
 }
@@ -364,12 +368,7 @@ td.t3-page-column, td.t3-page-lang-column {
 .t3-page-ce:hover > div > div > a > .t3-icon-document-new,
 .t3-page-ce:hover > div > div > a > .t3-icon-gridelements-copyfrompage,
 .t3-page-ce:hover > div > div > a > .t3-icon-gridelements-pastecopy,
-.t3-page-ce:hover > div > div > a > .t3-icon-gridelements-pasteref,
-.typo3-dblist .t3-icon-document-new,
-.typo3-dblist .t3-icon-gridelements-copyfrompage,
-.typo3-dblist .t3-icon-gridelements-pastecopy,
-.typo3-dblist .t3-icon-gridelements-pasteref,
-#ext-recordlist-mod1-index-php .typo3-docheader-buttons .t3-icon-document-new {
+.t3-page-ce:hover > div > div > a > .t3-icon-gridelements-pastere {
 	display: inline-block!important;
 }
 
